VFS-10767 Fixed z-index of stacked modals

--- a/app/styles/onedata-gui-common/components/bs-modal.scss
+++ b/app/styles/onedata-gui-common/components/bs-modal.scss
@@ -121,8 +121,8 @@ $modal-scroll-margin: 14px;
 
 // support for modal-on-modal shadows
 .modal + div + .modal {
-  z-index: $zindex-modal + 2;
+  z-index: $zindex-modal-secondary;
 }
 .modal + div + .modal + div > .modal-backdrop {
-  z-index: $zindex-modal + 1;
+  z-index: $zindex-modal-secondary-backdrop;
 }
